[package]
name = "melatonin"
description = "A version manager for the BYOND environment"
version = "0.5.0"
edition = "2021"
authors = ["Avunia Takiya <avunia@takiya.eu>"]
publish = false
default-run = "melatonin"

[dependencies]
anyhow = "~1.0.75"
clap = { version = "~4.4.8", features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
clap-verbosity-flag = "~2.1.0"
directories = "~5.0.1"
downloader = "~0.2.7"
indicatif = "~0.17.7"
log = "~0.4.20"
minreq = { version = "~2.11.0", features = ["https"] }
regex = "~1.10.2"
serde = { version = "~1.0.193", default-features = false, features = [
	"derive",
	"std",
] }
serde_json = "~1.0.108"
simple_logger = { version = "~4.3.0", default-features = false, features = [
	"colored",
] }
tempfile = "3.9.0"
url = "~2.5.0"
winreg = "0.52.0"
zip = { version = "~0.6.6", default-features = false, features = ["deflate"] }
