[package]
name = "melatonin"
description = "A version manager for the BYOND environment"
version = "0.9.1"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/atakiya/melatonin/"
keywords = ["byond", "version", "manager", "dreammaker"]
edition = "2021"
authors = ["Avunia Takiya <avunia@takiya.eu>"]
publish = true
default-run = "bvm"

[[bin]]
name = "bvm"
path = "src/main.rs"

[[bin]]
name = "bvm-shim"
path = "src/bin/shim.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
	"derive",
	"env",
	"unicode",
	"wrap_help",
] }
clap-verbosity-flag = "3"
colored = "3"
directories = "6"
downloader = "0.2"
log = "0.4"
minreq = { version = "2", features = ["https"] }
regex = "1"
serde = { version = "1", default-features = false, features = [
	"derive",
	"std",
] }
serde_json = "1"
simple_logger = { version = "5", default-features = false, features = [
	"colors",
] }
tempfile = "3"
url = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
